--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-plugin-component": "^1.1.1",
+    "http-server": "^14.1.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
